--- a/relay-card.service
+++ b/relay-card.service
@@ -3,10 +3,10 @@ Description=Waveshare RPi Relay/Expansion Board
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/relay-card.gpio export
+ExecStart=/usr/bin/relay-card export
 RemainAfterExit=true
 
-ExecStop=/usr/bin/relay-card.gpio unexport
+ExecStop=/usr/bin/relay-card unexport
 
 [Install]
 WantedBy=multi-user.target
